# txt_to_epub_maker

./: CMakeLists.txt  README.md
data/: generate.ps1
includes/: TxtToEpubMaker.cpp  TxtToEpubMaker.h
includes/classes/: TxtToEpubMaker.cpp  TxtToEpubMaker.h
src/: main.cpp  test.cpp
